Agregando resizing a las imagenes

--- a/cuadros.html
+++ b/cuadros.html
@@ -71,7 +71,7 @@
             <h1 class="text-3xl font-bold mb-8">Cuadros</h1>
             <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-7 gap-6">
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/carti-die-lit.png" alt="Playboi Carti - Die Lit cover"
+                    <img src="https://i.ezegatica.com/cuadros/carti-die-lit.png?w=300&h=300&q=60" alt="Playboi Carti - Die Lit cover"
                         width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg" alt="JACKBOYS - JACKBOYS cover"
+                    <img src="https://i.ezegatica.com/cuadros/jackboys-jackboys.jpg?w=300&h=300&q=60" alt="JACKBOYS - JACKBOYS cover"
                         width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/red%20hot%20chilli%20pepers%20blood%20sugar%20magik.png"
+                    <img src="https://i.ezegatica.com/cuadros/red%20hot%20chilli%20pepers%20blood%20sugar%20magik.png?w=300&h=300&q=60"
                         alt="Red Hot Chilli Peppers - Blood Sugar Sex Magik cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg"
+                    <img src="https://i.ezegatica.com/cuadros/kanye-west-mbdtf.jpg?w=300&h=300&q=60"
                         alt="Kanye West - My Beautiful Dark Twisted Fantasy cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/tame-impala-currents.png"
+                    <img src="https://i.ezegatica.com/cuadros/tame-impala-currents.png?w=300&h=300&q=60"
                         alt="Tame Impala - Currents cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/travis-scott-franchise.jpg"
+                    <img src="https://i.ezegatica.com/cuadros/travis-scott-franchise.jpg?w=300&h=300&q=60"
                         alt="Travis Scott - Franchise cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/childish-gambino-awaken-my-love.jpg"
+                    <img src="https://i.ezegatica.com/cuadros/childish-gambino-awaken-my-love.jpg?w=300&h=300&q=60"
                         alt="Childish Gambino - Awaken, My Love! cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/flying-lotus-LA-2x3.jpg"
+                    <img src="https://i.ezegatica.com/cuadros/flying-lotus-LA-2x3.jpg?w=300&h=300&q=60"
                         alt="Flying Lotus - L.A. EP 2 X 3 cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/daft-punk-random-access-memories.png"
+                    <img src="https://i.ezegatica.com/cuadros/daft-punk-random-access-memories.png?w=300&h=300&q=60"
                         alt="Daft Punk - Random Access Memories cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/tyler-flower-boy.png"
+                    <img src="https://i.ezegatica.com/cuadros/tyler-flower-boy.png?w=300&h=300&q=60"
                         alt="Tyler, the Creator - Flower Boy cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/kids-see-ghosts.jpg"
+                    <img src="https://i.ezegatica.com/cuadros/kids-see-ghosts.jpg?w=300&h=300&q=60"
                         alt="KIDS SEE GHOSTS - KIDS SEE GHOSTS cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/catriel-el-disko.png" alt="Catriel - El Disko cover"
+                    <img src="https://i.ezegatica.com/cuadros/catriel-el-disko.png?w=300&h=300&q=60" alt="Catriel - El Disko cover"
                         width="300" height="300" style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
                     <div
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/denzel-curry-melt-my-eyez.jpg"
+                    <img src="https://i.ezegatica.com/cuadros/denzel-curry-melt-my-eyez.jpg?w=300&h=300&q=60"
                         alt="Denzel Curry - Melt My Eyez See Your Future cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
@@ -292,7 +292,7 @@
                     </div>
                 </div>
                 <div class="relative group cursor-pointer overflow-hidden rounded-lg">
-                    <img src="https://i.ezegatica.com/cuadros/kendrick-lamar-good-kid_maad-city.jpg"
+                    <img src="https://i.ezegatica.com/cuadros/kendrick-lamar-good-kid_maad-city.jpg?w=300&h=300&q=60"
                         alt="Kendrick Lamar - Good Kid, M.A.A.D City cover" width="300" height="300"
                         style="aspect-ratio: 300 / 300; object-fit: cover;"
                         class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
