--- a/patentes.html
+++ b/patentes.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Traductor de patentes diplomaticas</h1>
     <h3>Para cuando andás por la calle y no sabes de que país o institución es ese auto con patente rara.</h3>
+    
     <form id="form-patente">
         <label for="patente">Ingrese la patente a traducir:</label>
         <input type="text" id="patente" name="patente">
@@ -20,6 +21,7 @@
         <p id="categoria"></p>
     </b>
     <p id="traduccion"></p>
+    <small>Basado en: <a href="https://www.argentina.gob.ar/normativa/nacional/resoluci%C3%B3n-59-2019-319658/texto" target="_blank">texto original de resolución</a></small>
     <script src="assets/scripts/patentes.js"></script>
     <script lang="javascript">
         const form = document.getElementById('form-patente');
