Añadiendo mejoras en modoDev

--- a/patentes.html
+++ b/patentes.html
@@ -330,7 +330,8 @@
 
     <!-- Dev mode toggle button -->
     <button id="dev-mode-toggle"
-        class="fixed bottom-4 right-4 p-2 bg-dev border border-red-300 text-red-700 rounded-full shadow-lg focus:outline-none hover:bg-red-200"
+        class="fixed bottom-4 right-4 p-2 rounded-full shadow-lg focus:outline-none hover:opacity-80"
+        style="background-color: var(--dev-background-color); border: 1px solid var(--dev-border-color); color: var(--dev-text-color);"
         title="Dev Mode">🔧</button>
 
     <script src="assets/scripts/patentes.js"></script>
