--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
 
     <div class="go-forward">
-        <a href="./proyectos" target="_self" rel="noopener noreferrer">
+        <!-- <a href="./proyectos" target="_self" rel="noopener noreferrer">
             PROYECTOS >
-        </a> <br/>
+        </a> <br/> -->
         <a href="./cuadros" target="_self" rel="noopener noreferrer">
             CUADROS >
         </a>
